Bug 64537 - subsurface-server-protocol.h: No such file or directory
Summary: subsurface-server-protocol.h: No such file or directory
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-13 13:22 UTC by U. Artie Eoff
Modified: 2013-05-15 02:41 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description U. Artie Eoff 2013-05-13 13:22:48 UTC
Unable to use compositor.h from the exported weston sdk:

$WLD/include/weston/compositor.h:38:40: fatal error: subsurface-server-protocol.h: No such file or directory

First bad commit: 
http://cgit.freedesktop.org/wayland/weston/commit/?id=2396aec6842c709a714f3825dbad9fd88478f2e6

subsurface-server-protocol.h needs to be exported if meant to be useful for plugins or only included in compositor.c if meant to be hidden.
Comment 1 U. Artie Eoff 2013-05-13 22:59:03 UTC
Patch submitted to list:

http://lists.freedesktop.org/archives/wayland-devel/2013-May/009177.html

TODO: We should develop a test for Weston's 'make check' that checks for these types of breaks.  For example, stage-install the SDK and compile a simple module program.
Comment 2 Kristian Høgsberg 2013-05-15 02:30:38 UTC
commit ec08f334820921c2843c37b0b1795748aea37c87
Author: U. Artie Eoff <ullysses.a.eoff@intel.com>
Date:   Mon May 13 15:55:47 2013 -0700

    move subsurface-server-protocol.h include out of compositor.h
    
    The subsurface-server-protocol.h header should not be included
    by any headers that are part of the SDK since it is not exported.
    Otherwise, SDK consumers will break during compilation.
    
    Move this include from compositor.h to compositor.c.
    
    Fixes https://bugs.freedesktop.org/show_bug.cgi?id=64537


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.